[metadata]
name = 'pyconverse'
version = '0.1.0'
description = 'Coversational Transcript Analysis using various NLP techniques'
author = 'AnjanaRita'
author_email = 'ritaanjana1993@gmail.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/AnjanaRita/Converse'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
